--- a/server/public/signup.html
+++ b/server/public/signup.html
@@ -29,9 +29,14 @@
         <div class="container row">
             <div class="jumbotron col-sm-4 pull-center">
                 <form action="/signup" method="post">
+                   
                     <div class="form-group">
-                        <label>Username:</label>
-                        <input class="form-control" required type="text" name="username"/>
+                        <label>Firstname:</label>
+                        <input class="form-control" required type="text" name="firstname"/>
+                    </div>
+                    <div class="form-group">
+                        <label>Lastname:</label>
+                        <input class="form-control" required type="text" name="lastname"/>
                     </div>
                     <div class="form-group">
                         <label>Email:</label>
